# farstream

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  example.py  farstream-uninstalled.pc.in  farstream.pc.in
common/: Makefile.in
common-modified/: Makefile.in  gst-glib-gen.mak  gtk-doc-plugins.mak  gtk-doc.mak
common/m4/: Makefile.in
debian/: README.source  changelog  control  copyright  gbp.conf  gir1.2-farstream-0.2-sipe.install  libfarstream-0.1-0.install  libfarstream-0.1-0.symbols  libfarstream-0.1-dev.install  libfarstream-0.2-0.symbols  libfarstream-0.2-2.symbols  libfarstream-0.2-5-sipe.install  libfarstream-0.2-5-sipe.symbols  libfarstream-0.2-5.install  libfarstream-0.2-5.symbols  libfarstream-0.2-doc.install  libfarstream-0.2-sipe-dev.install  libfarstream-0.2-sipe-doc.install  libgstfarsight0.10-0.install  libgstfarsight0.10-0.symbols  libgstfarsight0.10-dev.install  libgstfarsight0.10-doc.install  libgstfarstream0.10-0.install  libgstfarstream0.10-0.symbols  libgstfarstream0.10-dev.install  libgstfarstream0.10-doc.install  python-farsight.install  python-farstream.install  rules  watch
debian/patches/: 00-dont-release-pads.patch  0001-Fix-some-mismatched-redundant-para-gtk-doc-tags.patch  0001-Prefer-dynamic-PT-101-for-telephone-event-at-clock-r.patch  0001-Revert-Requirement-is-actually-1.4-for-srtp.patch  0001-rtpconference-The-ptime-maxptime-in-caps-are-actuall.patch  0001-rtpdiscocodecs-Remove-a-bad-cast-when-listing-codecs.patch  01-set-remote-candidates-in-idle.patch  doc-update-common.patch  fix_doc_ftbfs.patch  series
debian/upstream/: signing-key.asc
docs/: Makefile.in  codingstyle.txt  version.entities.in
docs/libs/: Makefile.am  Makefile.in  farstream-libs-docs.sgml  farstream-libs-sections.txt
docs/libs/html/: FsBaseConference.html  FsConference.html  FsElementAddedNotifier.html  FsParticipant.html  FsSession.html  FsStream.html  FsStreamTransmitter.html  FsTransmitter.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  farsight-libs-FsCandidate.html  farsight-libs-FsCodec.html  farsight-libs-FsPlugin.html  farsight-libs.devhelp  farsight-libs.devhelp2  farsight2-libs-FsCandidate.html  farsight2-libs-FsCodec.html  farsight2-libs-FsPlugin.html  farsight2-libs-Network-interfaces-discovery.html  farsight2-libs-RTP-Specific-types.html  farsight2-libs-Utility-functions.html  farsight2-libs-fs-session.html  farsight2-libs-fs-utils.html  farsight2-libs.devhelp  farsight2-libs.devhelp2  farstream-libs-FsCandidate.html  (+9 more)
docs/plugins/: Makefile.am  Makefile.in  farsight2-plugins.args  farsight2-plugins.hierarchy  farsight2-plugins.interfaces  farstream-plugins-docs.sgml  farstream-plugins-sections.txt  farstream-plugins.args  farstream-plugins.hierarchy  farstream-plugins.interfaces  farstream-plugins.signals  farstream-plugins.types
examples/: Makefile.in
examples/commandline/: Makefile.am  Makefile.in  simple-call-shm.c  simple-call.c
examples/gui/: Makefile.in  fs-gui-dtmf.ui  fs-gui-main-window.ui  fs-gui-startup.ui  fs-gui-user-frame.ui  fs-gui.py  fs_gui_net.py
farstream/: Farstream-0.1.gir  Farstream-0.2.gir  Makefile.am  Makefile.in  fs-candidate.c  fs-candidate.h  fs-codec.c  fs-codec.h  fs-conference.c  fs-conference.h  fs-element-added-notifier.c  fs-element-added-notifier.h  fs-participant.c  fs-participant.h  fs-plugin.c  fs-plugin.h  fs-private.h  fs-rtp.c  fs-session.c  fs-session.h  fs-stream-transmitter.c  fs-stream-transmitter.h  fs-stream.c  fs-stream.h  fs-transmitter.c  fs-transmitter.h  fs-utils.c
gst/: Makefile.in
gst-libs/: Makefile.in
gst-libs/gst/: Makefile.in
gst/fsfunnel/: Makefile.in
gst/fsmsnconference/: Makefile.am  Makefile.in  fs-msn-cam-recv-conference.c  fs-msn-cam-send-conference.c  fs-msn-conference.c  fs-msn-connection.c  fs-msn-connection.h  fs-msn-participant.c  fs-msn-participant.h  fs-msn-session.c  fs-msn-stream.c
gst/fsrawconference/: Makefile.am  Makefile.in  fs-raw-conference-plugin.c  fs-raw-conference.c  fs-raw-session.c  fs-raw-stream.c
gst/fsrtcpfilter/: Makefile.am  Makefile.in  fs-rtcp-filter.c  fs-rtcp-filter.h
gst/fsrtpconference/: Makefile.am  Makefile.in  default-codec-preferences  default-element-properties  fs-rtp-bin-error-downgrade.c  fs-rtp-bin-error-downgrade.h  fs-rtp-bitrate-adapter.c  fs-rtp-bitrate-adapter.h  fs-rtp-codec-cache.c  fs-rtp-codec-negotiation.c  fs-rtp-codec-negotiation.h  fs-rtp-codec-specific.c  fs-rtp-codec-specific.h  fs-rtp-conference-plugin.c  fs-rtp-conference.c  fs-rtp-conference.h  fs-rtp-discover-codecs.c  fs-rtp-discover-codecs.h  fs-rtp-dtmf-sound-source.c  fs-rtp-keyunit-manager.c  fs-rtp-marshal.c  fs-rtp-marshal.h  fs-rtp-packet-modder.c  fs-rtp-session.c  fs-rtp-session.h  fs-rtp-special-source.c  fs-rtp-stream.c  fs-rtp-stream.h  fs-rtp-substream.c  fs-rtp-tfrc.c  fs-rtp-tfrc.h
gst/fsrtpxdata/: Makefile.am  Makefile.in  fsrtpxdata.c  fsrtpxdatadepay.c  fsrtpxdatadepay.h  fsrtpxdatapay.c  fsrtpxdatapay.h
gst/fsvideoanyrate/: Makefile.am  Makefile.in  videoanyrate.c  videoanyrate.h
gst/funnel/: Makefile.in
gst/rtcpfilter/: Makefile.in
gst/videoanyrate/: Makefile.in
m4/: Makefile.in
python/: Makefile.in  pyfarsight.c
tests/: Makefile.in
tests/check/: Makefile.am  Makefile.in  check-threadsafe.h  testutils.c
tests/commandline/: Makefile.in
tests/gui/: Makefile.in
tests/rtp/: Makefile.am  Makefile.in  codec-discovery.c
transmitters/: Makefile.in
transmitters/multicast/: Makefile.am  Makefile.in  fs-multicast-stream-transmitter.c  fs-multicast-transmitter.c
transmitters/nice/: Makefile.am  Makefile.in  fs-nice-agent.c  fs-nice-agent.h  fs-nice-stream-transmitter.c  fs-nice-transmitter.c  fs-nice-transmitter.h
transmitters/rawudp/: Makefile.am  Makefile.in  fs-rawudp-component.c  fs-rawudp-marshal.c  fs-rawudp-marshal.h  fs-rawudp-stream-transmitter.c  fs-rawudp-transmitter.c  fs-rawudp-transmitter.h
transmitters/shm/: Makefile.am  Makefile.in  fs-shm-stream-transmitter.c  fs-shm-transmitter.c
(+111 files in other folders)
